# celo-kona

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  PERFORMANCE_OPTIMIZATIONS.md  README.md  clippy.toml  deny.toml  flake.nix  otel.local.sh  otel.local.yaml  performance_analysis_report.md  release.toml
.cargo/: mutants.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/scripts/: check_no_std.sh  update_celo_genesis.sh
.github/workflows/: build.yaml  no_std.yml  proof.yaml  push-container-dev copy.yaml  rust_ci.yml  (+4 more)
crates/alloy-celo-evm/: Cargo.toml  README.md
crates/alloy-celo-evm/res/: predeploys.json
crates/alloy-celo-evm/src/: blocklist.rs  cip64_storage.rs  fee_context_cache.rs  lib.rs
crates/alloy-celo-evm/src/block/: executor.rs  executor_factory.rs  mod.rs  receipt_builder.rs  tests.rs  upgrade18.rs  upgrade18_data.rs
crates/celo-alloy/: Cargo.toml  README.md
crates/celo-alloy/consensus/: Cargo.toml  README.md
crates/celo-alloy/consensus/src/: block.rs  lib.rs  pre_gingerbread.rs  reth_compat.rs
crates/celo-alloy/consensus/src/receipt/: envelope.rs  mod.rs  receipts.rs
crates/celo-alloy/consensus/src/transaction/: cip64.rs  envelope.rs  mod.rs  pooled.rs  tx_type.rs  tx_type_alt.rs  typed.rs
crates/celo-alloy/network/: Cargo.toml  README.md
crates/celo-alloy/network/src/: lib.rs
crates/celo-alloy/rpc-types/: Cargo.toml  README.md
crates/celo-alloy/rpc-types-engine/: Cargo.toml  README.md
crates/celo-alloy/rpc-types-engine/src/: attributes.rs  lib.rs
crates/celo-alloy/rpc-types/src/: lib.rs  receipt.rs  reth_compat.rs  transaction.rs
crates/celo-alloy/rpc-types/src/transaction/: request.rs
crates/celo-alloy/src/receipt/: envelope.rs
crates/celo-alloy/src/transaction/: cip64.rs  envelope.rs
crates/celo-otel/: Cargo.toml
crates/celo-otel/src/: lib.rs  logger.rs  metrics.rs  resource.rs
crates/celo-reth/: Cargo.toml  Dockerfile  build.rs
crates/celo-reth/proptest-regressions/: pool.txt
crates/celo-reth/res/genesis/: mainnet.toml  sepolia.toml
crates/celo-reth/src/: celo_migrate_v2.rs  download_repair.rs  fee_resolver.rs  lib.rs  node.rs  payload.rs  pool.rs  primitives.rs  receipt.rs  receipts.rs  rpc.rs  signed_tx.rs  snapshot_manifest.rs  state_import.rs  test_utils.rs  units.rs
crates/celo-reth/src/chainspec/: hardfork.rs  mod.rs  parser.rs
crates/celo-reth/tests/: cip64_payload_builder.rs  units_compile_fail.rs
crates/celo-reth/tests/ui/: fc_plus_native.rs  fc_plus_native.stderr  native_from_fc.rs  native_from_fc.stderr  native_into_u128_implicit.rs  native_into_u128_implicit.stderr  native_plus_fc.rs  native_plus_fc.stderr
crates/celo-revm/: Cargo.toml  README.md
crates/celo-revm/src/: celo_system_call.rs  chain_info.rs  constants.rs  context.rs  core_contracts.rs  evm.rs  fee_currency_context.rs  global_context.rs  handler.rs  lib.rs  precompiles.rs  test_utils.rs  transaction.rs  transfer.rs  tx.rs  units.rs
crates/celo-revm/src/api/: builder.rs  celo_block_env.rs  celo_system_tx.rs  default_ctx.rs  exec.rs  mod.rs
crates/celo-revm/src/common/: cip64_storage.rs  fee_currency_context.rs  global_cip_64_context.rs  global_fee_currency_context.rs  mod.rs
crates/celo-revm/src/contracts/: core_contracts.rs  erc20.rs  mod.rs
crates/celo-revm/src/contracts/testdata/: mento_stable_token_v2.hex
crates/celo-revm/src/precompiles/: transfer.rs
crates/celo-revm/src/receipt/: envelope.rs
crates/celo-revm/src/transaction/: abstraction.rs  cip64.rs  envelope.rs  mod.rs  pooled.rs  tx_type.rs  typed.rs
crates/kona/derive/: Cargo.toml
crates/kona/derive/src/: batch_auth.rs  blob_data.rs  blobs.rs  calldata.rs  ethereum.rs  lib.rs
crates/kona/driver/: Cargo.toml  README.md
crates/kona/driver/src/: core.rs  executor.rs  lib.rs
crates/kona/genesis/: Cargo.toml  README.md
crates/kona/genesis/src/: lib.rs  rollup.rs
crates/kona/genesis/src/chain/: hardfork.rs  mod.rs
crates/kona/proof/: Cargo.toml  README.md
crates/kona/proof/src/: attributes.rs  boot.rs  executor.rs  hint.rs  l2.rs  lib.rs  pipeline.rs  sync.rs
crates/kona/proof/src/l1/: chain_provider.rs  mod.rs  pipeline.rs
crates/kona/proof/src/l2/: chain_provider.rs  mod.rs
crates/kona/protocol/: Cargo.toml  README.md
crates/kona/protocol/src/: block.rs  celo_to_op.rs  convert.rs  lib.rs
crates/kona/protocol/src/batch/: adapter.rs  batch.rs  inclusion.rs  mod.rs  span.rs  traits.rs
crates/kona/protocol/src/derive/: batch_provider.rs  batch_queue.rs  batch_stream.rs  batch_validator.rs  builder.rs  mod.rs  next_batch_provider.rs  pipeline.rs  providers.rs
crates/kona/protocol/src/derive/attributes/: mod.rs  stateful.rs
crates/kona/protocol/src/derive/batch/: batch_provider.rs  batch_queue.rs  batch_stream.rs  batch_validator.rs  mod.rs
crates/kona/protocol/src/derive/traits/: mod.rs  providers.rs
crates/kona/protocol/src/protocol/: mod.rs  utils.rs
crates/kona/registry/: Cargo.toml
crates/kona/registry/etc/: 11142220-rollup.json  chainList.json  configs.json
crates/kona/registry/src/: lib.rs  superchain.rs
e2e_test/: .gitignore  celo-dev-genesis.json  gen_genesis.sh  generate_upgrade18_fixtures.sh  run_all_tests.sh  test_admin_namespace_gating.sh  test_debug_trace_cip64_rate_update.sh  test_fee_currency_disable_and_enable_blocking.sh  test_fee_currency_disable_blocking.sh  test_fee_currency_fails_intrinsic.sh  test_fee_currency_fails_on_credit.sh  test_fee_currency_fails_on_debit.sh  test_fee_currency_gas_estimation.sh  test_fee_currency_gas_estimation_case_insensitive.sh  test_fee_currency_unblock.sh  test_fee_history_cip64.sh  test_proofs_history_debug.sh  test_smoketest.sh  test_upgrade18_migration.sh
examples/: README.md  performance-demo.rs
examples/execution-fixture/: Cargo.toml  README.md
examples/execution-fixture/src/: main.rs
scripts/: CELO_MIGRATION.md  append_l2_allocs.py  check_dump_duplicates.rs  check_no_std.sh  gen_upgrade18_predeploys.py  performance_analysis.sh  prepare_celo_import.sh
utils/: Cargo.toml
utils/src/: logger.rs  metrics.rs  resource.rs
(+59 files in other folders)
