[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.86"
authors = []
homepage = ""
repository = ""
readme = "README.md"
version = "0.0.1"
keywords = ["ethereum", "optimism", "celo", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["**/target"]

[workspace]
resolver = "2"
members = [
  "bin/*",
  "crates/alloy-celo-evm",
  "crates/celo-alloy/*",
  "crates/celo-revm",
  "crates/celo-otel",
  "crates/kona/*",
  "examples/*",
]
default-members = [
  "bin/host",
  "bin/client",
  "bin/execution-verifier",
]

[workspace.metadata.cargo-udeps.ignore]
normal = ["rustls-platform-verifier"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true

[profile.dev-client]
inherits = "dev"
panic = "abort"

[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"

[workspace.dependencies]
# Workspace
celo-client = { version = "0.1.0", path = "bin/client", default-features = false }
celo-alloy-consensus = { version = "0.1.0", path = "crates/celo-alloy/consensus", default-features = false }
celo-alloy-rpc-types-engine = { version = "0.1.0", path = "crates/celo-alloy/rpc-types-engine", default-features = false }
celo-alloy-rpc-types = { version = "0.1.0", path = "crates/celo-alloy/rpc-types", default-features = false }
celo-alloy-network = { version = "0.1.0", path = "crates/celo-alloy/network", default-features = false }
alloy-celo-evm = { version = "0.1.0", path = "crates/alloy-celo-evm", default-features = false }
celo-executor = { version = "0.1.0", path = "crates/kona/executor", default-features = false }
celo-driver = { version = "0.1.0", path = "crates/kona/driver", default-features = false }
celo-proof = { version = "0.1.0", path = "crates/kona/proof", default-features = false }
celo-protocol = { version = "0.1.0", path = "crates/kona/protocol", default-features = false }
celo-genesis = { version = "0.1.0", path = "crates/kona/genesis", default-features = false }
celo-revm = { version = "0.1.0", path = "crates/celo-revm", default-features = false }
celo-otel = { version = "0.1.0", path = "crates/celo-otel", default-features = false }

# Binaries
kona-host = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }
kona-client = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }

# Protocol
kona-driver = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }
kona-derive = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }
kona-genesis = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }
kona-protocol = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }
kona-registry = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }

# Providers
kona-providers-alloy = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }

# Proof
kona-mpt = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }
kona-proof = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }
kona-executor = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }
kona-std-fpvm = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }
kona-preimage = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }
kona-std-fpvm-proc = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }

# Utilities
kona-cli = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }
kona-serde = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.2", default-features = false }

# Alloy
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-trie = { version = "0.8.1", default-features = false }
alloy-eips = { version = "1.0.9", default-features = false }
alloy-serde = { version = "1.0.9", default-features = false }
alloy-chains = { version = "0.2.3", default-features = false }
alloy-network = { version = "1.0.9", default-features = false }
alloy-provider = { version = "1.0.9", default-features = false }
alloy-hardforks = { version = "0.2.6", default-features = false }
alloy-sol-types = { version = "1.1.2", default-features = false }
alloy-consensus = { version = "1.0.9", default-features = false }
alloy-transport = { version = "1.0.9", default-features = false }
alloy-rpc-types = { version = "1.0.9", default-features = false }
alloy-rpc-client = { version = "1.0.9", default-features = false }
alloy-primitives = { version = "1.1.2", default-features = false }
alloy-rpc-types-eth = { version = "1.0.9", default-features = false }
alloy-transport-http = { version = "1.0.9", default-features = false }
alloy-rpc-types-engine = { version = "1.0.9", default-features = false }
alloy-network-primitives = { version = "1.0.9", default-features = false }

# OP Alloy
alloy-op-hardforks = { version = "0.2.6", default-features = false }
op-alloy-consensus = { version = "0.17.2", default-features = false }
op-alloy-rpc-types = { version = "0.17.2", default-features = false }
op-alloy-rpc-types-engine = { version = "0.17.2", default-features = false }

# Execution
revm = { version = "24.0.1", default-features = false }
op-revm = { version = "5.0.1", default-features = false }
alloy-evm = { version = "0.10.0", default-features = false }
alloy-op-evm = { version = "0.10.0", default-features = false }

# Dependencies not in upstream kona-client
# These are kept separately to make it easier to compare and update the versions above
revm-context-interface = { version = "5.0.0", default-features = false }
revm-handler = { version = "5.0.1", default-features = false }
revm-context = { version = "5.0.1", default-features = false }
alloy-signer = { version = "1.0.9", default-features = false }

# Hokulea
hokulea-eigenda = { git = "https://github.com/Layr-Labs/hokulea", rev = "ceffe35", default-features = false}
hokulea-proof = { git = "https://github.com/Layr-Labs/hokulea", rev = "ceffe35", default-features = false}
hokulea-host-bin = { git = "https://github.com/Layr-Labs/hokulea", rev = "ceffe35", default-features = false}

# General
url = "2.5.4"
spin = "0.10.0"
clap = { version = "4.5.39", features = ["derive"] }
tokio = "1.45.1"
cfg-if = "1.0.0"
rstest = "0.25.0"
tempfile = "3.20.0"
arbitrary = "1.4.1"
async-trait = "0.1.88"
unsigned-varint = "0.8.0"

rand = { version = "0.9.1", default-features = false }
anyhow = { version = "1.0.98", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
derive_more = { version = "2.0.1", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }

auto_impl = "1.2.0"
bincode = "2.0.1"
similar-asserts = "1.7"

# Compression
miniz_oxide = "0.8.8"
brotli = { version = "8.0.1", default-features = false }

# Tracing
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
tracing = { version = "0.1.41", default-features = false }

# Serialization
serde_repr = "0.1.20"
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
serde_with = { version = "3", default-features = false, features = ["macros"] }

# K/V database
rocksdb = { version = "0.23.0", default-features = false }

# Cryptography
ark-ff = { version = "0.5.0", default-features = false }

# Tracing and telemetry
tracing-opentelemetry = "0.31.0"
opentelemetry = { version = "0.30.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.30.0", features = [
    "trace",
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.30.0", features = ["default", "metrics", "grpc-tonic", "logs"] }
opentelemetry-stdout = { version = "0.30.0", features = ["trace"] }
opentelemetry-appender-tracing = "0.30.1"
uuid = { version = "1", features = ["v4"] }

[patch."https://github.com/op-rs/kona"]
kona-host = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-client = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-driver   = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-derive   = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-genesis  = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-protocol = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-registry = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-providers-alloy = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-mpt        = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-proof      = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-executor   = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-std-fpvm   = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-preimage   = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-std-fpvm-proc = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-cli   = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
kona-serde = { git = "https://github.com/celo-org/kona", rev = "d6b2bd3", default-features = false }
